# framework_colors

./: .gitignore  MANIFEST.in  README.md  color_definitions.py  pyproject.toml
colors/: color_definitions.py  field_type.py  fields.py  models.py  settings.py  widgets.py
colors/templates/: color_select.html  color_select_option.html
