# Build Settings
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "colors"
version = "2025.04.17"
description = "Framework color selections."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django>=4.2"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Framework :: Django",
]

[tool.hatch.build.targets.wheel]
packages = ["colors"]
